force-app/main/default/objects/Escalation_Communication__c/Escalation_Communication__c.object-meta.xml
<CustomObject>
    <label>Escalation Communication</label>
    <nameField>
        <displayFormat>ESCC-{00000}</displayFormat>
        <label>Escalation Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalation Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>