force-app/main/default/objects/Escalation_Communication__c/fields/Escalation_Management__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Management__c</fullName>
    <label>Escalation Management</label>
    <referenceTo>Escalation_Management__c</referenceTo>
    <relationshipLabel>Escalation Communications</relationshipLabel>
    <relationshipName>Escalation_Communications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>