force-app/main/default/objects/Escalation_Communication__c/fields/Include_in_Updates__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Updates</label>
    <type>Checkbox</type>
</CustomField>