force-app/main/default/objects/Escalation_Communication__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escalation Manager</fullName>
            </value>
            <value>
                <fullName>Escalation Engineer</fullName>
            </value>
            <value>
                <fullName>Customer CIO</fullName>
            </value>
            <value>
                <fullName>Support Director</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>SVP of Support</fullName>
            </value>
            <value>
                <fullName>Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Sr. Technical Support Engineer</fullName>
            </value>
            <value>
                <fullName>Customer / Primary Technical Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>